
[package]
name = "validate_data_types"
version = "0.0.0"
edition = "2021"
license = "codigo"
publish = false


description = """
The purpose of this CIDL is to validate all the supported data types.
- Verifies all the supported types for PDA accounts
- Verifies all the supported types for Non-PDA accounts
- Verifies all the supported types for inputs
- The business logic should assign the input to the account's field
- The business logic test should verified that the input's values is the same value assign to the account's field
"""



[dependencies]
solana-program = ">=1.14, <1.17"
borsh = "0.10.3"
thiserror = "1"
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.0"
assert_matches = {version = "~1.5.0", optional = true}
solana-logger = {version = ">=1.14, <1.17", optional = true}
solana-program-test = {version = ">=1.14, <1.17", optional = true}
solana-sdk = {version = ">=1.14, <1.17", optional = true}
solana-validator = {version = ">=1.14, <1.17", optional = true}
solana-rpc-client = {version = ">=1.14, <1.17", optional = true}



[features]
test-sbf = [
    "assert_matches",
    "solana-sdk/default",
    "solana-logger",
    "solana-program-test",
    "solana-validator",
    "solana-rpc-client"
]

[lib]
crate-type = ["cdylib", "lib"]
path = "./lib.rs"