
[package]
name = "validate_accounts"
version = "0.0.0"
edition = "2021"
license = "codigo"
publish = false

authors = ["Codigo <support@codigo.ai>"]
description = """
- The purpose of this CIDL is to validate all the supported features for an account
- Verifies it can define a Non-PDA account with one field
- Verifies it can define PDA account with one field and a static seed
- Verifies it can define PDA account with one field, a static and dynamic seed
- Verifies it can define PDA account with all the possible seeds data types
- Verifies account space is calculated automatically
- Verifies it can mark an account as mutable
- Verifies it can mark an account as immutable
- Verifies it can generate the code to initialize an account in "Singleton mode" a.k.a init
- Verifies it can generate the code to initialize an account in "Non-Singleton mode" a.k.a init_if_needed
- Verifies the fee payer is the default payer when using an initialization method without explicitly specifying the payer
- Verifies it can close a Non-PDA account
- Verifies it can close a PDA account
- Verifies the fee payer is the default lamport receiver when a rent receiver is not specify

Some useful links:

  - [Blockchain Extensions](https://docs.codigo.ai/category/blockchain-extensions)
  - [Learning the Basics](https://docs.codigo.ai/código-interface-description-language/learning-the-basics)
  - [Building Solana Programs with CIDL: A Comprehensive Guide Part I](https://docs.codigo.ai/guides/part-1-building-solana-programs)
"""
homepage = "https://codigo.ai"
repository = "https://github.com/Codigo-ai"

[dependencies]
solana-program = ">=1.14, <1.17"
borsh = "0.10.3"
thiserror = "1"
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.0"
assert_matches = {version = "~1.5.0", optional = true}
solana-logger = {version = ">=1.14, <1.17", optional = true}
solana-program-test = {version = ">=1.14, <1.17", optional = true}
solana-sdk = {version = ">=1.14, <1.17", optional = true}
solana-validator = {version = ">=1.14, <1.17", optional = true}
solana-rpc-client = {version = ">=1.14, <1.17", optional = true}



[features]
test-sbf = [
    "assert_matches",
    "solana-sdk/default",
    "solana-logger",
    "solana-program-test",
    "solana-validator",
    "solana-rpc-client"
]

[lib]
crate-type = ["cdylib", "lib"]
path = "lib.rs"