
[package]
name = "validate_data_types"
version = "0.0.0"
edition = "2021"
license = "codigo"
publish = false


description = """
The purpose of this CIDL is to validate all the supported data types.
- Verifies all the supported types for PDA accounts
- Verifies all the supported types for Non-PDA accounts
- Verifies all the supported types for inputs
- The business logic should assign the input to the account's field
- The business logic test should verified that the input's values is the same value assign to the account's field
"""



[dependencies]
solana-program = ">=1.14, <1.17"
borsh = "0.10.3"
thiserror = "1"
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.0"
ahash = "=0.8.6"
toml_edit = "=0.21.0"



[lib]
crate-type = ["cdylib", "lib"]
path = "./lib.rs"
