[workspace]
members = ["libraries/*"]

[package]
name = "validate_inventory"
version = "0.0.0"
edition = "2021"
license = "codigo"
publish = false

authors = ["Codigo <support@codigo.ai>"]
description = """
This is a simple inventory contract for an e-commerce platform
"""
homepage = "https://codigo.ai"
repository = "https://github.com/Codigo-ai"

[dependencies]
solana-program = ">=1.16, <1.18"
borsh = "0.10.3"
thiserror = "1"
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.0"
ahash = "=0.8.6"
toml_edit = "=0.21.0"
sha2 = "0.10.7"

csl_spl_account_compression = { path = "libraries/csl_spl_account_compression 0.0.0", version = "0.0.0"}
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
csl_spl_token = { path = "libraries/csl_spl_token 0.0.0", version = "0.0.0"}
spl-associated-token-account = { version = "2.0.0", features = ["no-entrypoint"] }
csl_spl_assoc_token = { path = "libraries/csl_spl_assoc_token 0.0.0", version = "0.0.0"}


[lib]
crate-type = ["cdylib", "lib"]
path = "./lib.rs"