
[package]
name = "informal_lender"
version = "0.1.0"
edition = "2021"
license = "mit"
publish = false


description = """
With this contract an informal lender can lend money through the blockchain.
For simplicity, the money will be SOL currency.
"""



[dependencies]
solana-program = ">=1.16, <1.18"
borsh = "0.10.3"
thiserror = "1"
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.0"
ahash = "=0.8.6"
toml_edit = "=0.21.0"



[lib]
crate-type = ["cdylib", "lib"]
path = "./lib.rs"
