
[package]
name = "budget_tracker"
version = "0.0.1"
description = "The purpose of this contract is to track the income and outcome of a given user. For this contract, we are going to  target the Solana blockchain. Thus, we define the data structure **Record** that will be transpiled to a PDA Account  based on the seeds defined in the solana extension. In addition, the contract defines three methods, also known as  instruction; through this method, we add behavior.  Some useful links:    - [Blockchain Extensions](https://docs.codigo.ai/category/blockchain-extensions)   - [Learning the Basics](https://docs.codigo.ai/código-interface-description-language/learning-the-basics)   - [Building Solana Programs with CIDL: A Comprehensive Guide Part I](https://docs.codigo.ai/guides/part-1-building-solana-programs)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "budget_tracker"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"