[package]
name = "ExpenseSplitter"
version = "1.0.0"
description = """
A contract for managing group expenses, allowing members to split costs fairly."""

edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ExpenseSplitter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
solana-program = "=1.17.0"
ahash = "=0.8.6"
bumpalo = "=3.14.0"
